CMAKE_MINIMUM_REQUIRED(VERSION 3.13 FATAL_ERROR)
PROJECT("oui-blendish-examples")

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/src)
ADD_COMPILE_OPTIONS(-Wall -Werror -Wno-unused-but-set-variable -Wno-unused-variable)
ADD_LINK_OPTIONS(LINKER:--as-needed LINKER:--no-undefined LINKER:--no-allow-shlib-undefined)

FIND_PACKAGE(PkgConfig REQUIRED)

PKG_CHECK_MODULES(NANOVG_PKG REQUIRED IMPORTED_TARGET nanovg)
PKG_CHECK_MODULES(GLFW3_PKG REQUIRED IMPORTED_TARGET glfw3)
PKG_CHECK_MODULES(SDL2_PKG REQUIRED IMPORTED_TARGET sdl2)

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})
ADD_COMPILE_OPTIONS(-Wall -Werror -Wno-unused-but-set-variable -Wno-unused-variable)
ADD_LINK_OPTIONS(LINKER:--as-needed LINKER:--no-undefined LINKER:--no-allow-shlib-undefined)

FUNCTION(ADD_EXAMPLE EXAMPLE_NAME EXAMPLE_FILE)
	ADD_EXECUTABLE(${EXAMPLE_NAME} ${EXAMPLE_FILE} src/oui.c src/blendish.c)
	TARGET_COMPILE_OPTIONS(${EXAMPLE_NAME} PRIVATE ${NANOVG_PKG_CFLAGS} ${NANOVG_PKG_CFLAGS_OTHER})
	TARGET_COMPILE_OPTIONS(${EXAMPLE_NAME} PRIVATE ${GLFW3_PKG_CFLAGS} ${GLFW3_PKG_CFLAGS_OTHER})
	TARGET_LINK_LIBRARIES(${EXAMPLE_NAME} PRIVATE PkgConfig::NANOVG_PKG PkgConfig::GLFW3_PKG)
	TARGET_COMPILE_DEFINITIONS(${EXAMPLE_NAME} PRIVATE NANOVG_USE_OPENGL)
ENDFUNCTION()

ADD_EXAMPLE(example_oui example/example_oui.c)
